# gf-complete

./: .gitignore  CMakeLists.txt  README  README.txt
ci/: Dockerfile  build.sh  common.ps1  common.sh  configure.ps1  install.sh  unittest.sh
cmake/: cmcpuid.c  cpuid.h  cpuid_pclmul.c  cpuid_pclmul.cpp  cpuid_simd.c  cpuid_simd.cpp
cmake/modules/: CheckCPUID.cmake  GetCpuFeatures.cmake  cpuid.c
include/: config.h.cmake.in  gf_int.h
src/: CMakeLists.txt  gf_general.c  gf_w16.c
test/: CMakeLists.txt  gf_unit.c
